# google-ai-haskell

./: .haskelineHistory  .history  loadGhci.sh  loadMain.sh  planet.cabal  tags
prog/: Planet.hs
src/Planet/: .directory  BotBase.hs  Engine.hs  GameHelper.hs  Parser.hs  SimpleBot.hs  Type.hs  Worker.hs
testsuite/resources/maps/: mapTest.txt
testsuite/tests/: EngineTest.hs  ParserTest.hs  Properties.hs  RunTestTH.hs  SimpleBotTest.hs
